[metadata]
name = hikari
description = hikari is a customisable Discord API wrapper with a focus on easy use, customization, and sane defaults.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = discord, api, bot, chatbot, chat, voip, asyncio
maintainer = Nekokatt
author = Nekokatt
url = https://gitlab.com/nekokatt/hikari
version = 0.0.1a
project_urls =
    Source=https://gitlab.com/nekokatt/hikari
    Tracker=https://gitlab.com/nekokatt/hikari/issues
    CI=https://gitlab.com/nekokatt/hikari/pipelines
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Chat
    Topic :: Communications :: Internet Phone
    Topic :: Communications :: Telephony
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6, <3.9
include_package_data = True
package_dir =
    =.
install_requires =
    aiohttp>=3.5.4,<3.6.0
    dataclasses==0.6
    setuptools>=30.0.0
    websockets==7.0

[options.packages.find]
where = .
exclude =
    tests
    .ci
    .git
    .tox
    .pytest_cache

[options.entry_points]
console_scripts =
    tox=tox:cmdline

[options.extras_require]
testing =
     asynctest==0.12.4
     async-timeout==3.0.1
     pytest==4.4.1
     pytest-asyncio==0.10.0
     pytest-cov==2.7.1
     pytest-html==1.20.0

[bdist_wheel]
universal = 1
