# Copyright © Nekoka.tt 2019
#
# This file is part of Hikari.
#
# Hikari is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hikari is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Hikari. If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = hikari
description = hikari is a customisable Discord API wrapper with a focus on easy use, customization, and sane defaults.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = discord, api, bot, chatbot, chat, voip, asyncio
maintainer = Nekoka.tt
author = Nekoka.tt
url = https://gitlab.com/nekokatt/hikari
version = LATEST
project_urls =
    Source=https://gitlab.com/nekokatt/hikari
    Tracker=https://gitlab.com/nekokatt/hikari/issues
    CI=https://gitlab.com/nekokatt/hikari/pipelines
platforms = any
license = LGPLv3
license_file = COPYING.LESSER.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: zlib
    Natural Language :: English
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Chat
    Topic :: Communications :: Internet Phone
    Topic :: Communications :: Telephony
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6, <3.9
include_package_data = True
package_dir =
    =.
install_requires =
    aiohttp>=3.5.4,<3.6.0
    dacite==1.0.2
    dataclasses==0.6
    python-dateutil==2.8.0
    setuptools>=30.0.0
    websockets==7.0

[options.packages.find]
where = .
exclude =
    tests
    .ci
    .git
    .tox
    .pytest_cache

[options.entry_points]
console_scripts =
    tox=tox:cmdline

[options.extras_require]
testing =
    asynctest==0.12.4
    async-timeout==3.0.1
    coverage==4.5.3
    pytest==4.4.1
    pytest-asyncio==0.10.0
    pytest-aiohttp==0.3.0
    pytest-cov==2.7.1
    pytest-html==1.20.0
    pytest-testdox==1.1.1

[bdist_wheel]
universal = 1
